# Legba

./: .env.claude.example  .env.example  .gitignore  LICENSE  README.md  docker-compose.claude.yml  docker-compose.cognitive.yml  docker-compose.yml  pyproject.toml
dags/: decision_surfacing.py  eval_rubrics.py  metrics_rollup.py  source_health.py
docker/: Caddyfile  Caddyfile.template  agent-entrypoint.sh  agent.Dockerfile  airflow-entrypoint.sh  airflow.Dockerfile  ingestion.Dockerfile  maintenance.Dockerfile  nginx-ui-v2.conf  subconscious.Dockerfile  supervisor.Dockerfile  ui-v2.Dockerfile  ui.Dockerfile
docs/: AI_MODELS.md  ANALYTICAL_FRAMEWORK.md  ARCHITECTURE_GUIDE.md  BACKLOG.md  CODE_MAP.md  CYCLES.md  DATA_QUALITY.md  DATA_SOURCES.md  DESIGN.md  DYNAMIC_ROUTING.md  EVALUATION_RUBRICS.md  EXECUTIVE_SUMMARY.md  GRACEFUL_SHUTDOWN.md  IMPROVEMENT_ANALYSIS.md  INGESTION.md  LEGBA.md  MAINTENANCE.md  NEXUS_AND_TEMPORAL.md  OPERATIONS.md  PROGRESS_AUDIT.md  PROMPT_DUMP.md  PROMPT_GUIDE.md  PROMPT_REFERENCE.md  REIFIED_RELATIONSHIPS.md  SUBCONSCIOUS.md  TOOL_UTILIZATION.md  UI_IMPROVEMENTS.md  UI_PANELS.md  UI_V2.md  bot-info.txt
legba-models/: Dockerfile  USAGE.md  docker-compose.slm.yml  docker-compose.yml  entrypoint.sh
legba-ui/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: backup.sh  diagnostics.sh  inject_message_at_419.sh  merge_claude_data.sh  migrate_signals_events.sql  os_dump.py  seed_data.py  seed_sources.py
seed_goal/: identity.txt  operating_principles.txt  (+2 more)
(+307 files in other folders)
