[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legba"
version = "0.1.0"
description = "Autonomous situational awareness platform"
license = {text = "MIT"}
authors = [{name = "ldgeorge85"}]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "redis[hiredis]>=5.0",
    "asyncpg>=0.29",
    "qdrant-client>=1.9",
    "pynacl>=1.5",
    "python-dotenv>=1.0",
    "nats-py>=2.7",
    "opensearch-py[async]>=2.4",
    "pyod>=1.1",
    "statsforecast>=1.7",
    "networkx>=3.2",
    "spacy>=3.7",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "feedparser>=6.0",
    "trafilatura>=1.8",
    "pycountry>=24.6",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.urls]
Repository = "https://github.com/ldgeorge85/legba"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/legba"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require external services (Redis, Postgres, Qdrant)",
]
